# marks

./: .dockerignore  Dockerfile  Makefile  README.md
axum/: .gitignore  Cargo.toml
axum/src/: error.rs  main.rs
svelte/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
svelte/src/: App.svelte  app.css
svelte/src/lib/: DialogToDelete.svelte  Edit.svelte  Footer.svelte  Header.svelte  Item.svelte  Top.svelte  Upload.svelte  Upload.ts  View.svelte  stores.ts
