[package]
name = "marks"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
serde_json = "1.0.99"
tracing-subscriber = "0.3"
tracing = "0.1.37"
walkdir = "2.3.3"
